# Pokemon-Bot

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: static.yml
cache/: version_reference.json
examples/: evaluate_custom_models.py
metamon/: README.md  __init__.py  datasets.py  download.py  env.py  interface.py  pyproject.toml  task_distributions.py
metamon/backend/: README.md  __init__.py
metamon/baselines/: __init__.py  base.py  compete.py  round_robin.py  vs_humans.py
metamon/data/: README.md  __init__.py  create_checks_jsons.py  create_movesets_jsons.py  datasets.py  download.py  download_stats.py  parsed_replay_dset.py  raw_replay_util.py  stat_scraper.py
metamon/env/: __init__.py  __main__.py  metamon_battle.py  metamon_player.py  wrappers.py
metamon/il/: model.py  train.py
metamon/metamon/: __init__.py  interface.py
metamon/pokemon/: env.py  metamon_battle.py  metamon_player.py
metamon/rl/: __init__.py  eval.py  eval_pretrained.py  evaluate.py  finetune_from_hf.py  metamon_to_amago.py  offline_from_config.py  online.py  pretrained.py  train.py
metamon/server/: config.js
metamon/tokenizer/: DefaultObservationSpace-v0.json  __init__.py  tokenizer.py
pokechamp/: .gitignore  LICENSE  README.md  common.py  local_1v1.py  package-lock.json  pytest.ini  requirements.txt  showdown_ladder.py
pokechamp/bayesian/: live_battle_predictor.py  pokemon_predictor.py  predictor_singleton.py  team_predictor.py  train_full_predictor.py
pokechamp/bots/: __init__.py  starter_kit_bot.py
(+26789 files in other folders)
