[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamon"
version = "1.1.0"
description = "Baselines and Datasets for Pokémon Showdown RL"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Jake Grigsby", email = "grigsby@cs.utexas.edu" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Games/Entertainment",
]
keywords = ["pokemon", "reinforcement-learning", "machine-learning"]
dependencies = [
  "gymnasium>=0.26,<=0.29.1",
  "torch>=2.6",
  "numpy",
  "gin-config",
  "wandb",
  "einops",
  "tqdm",
  "lz4",
  "termcolor",
  "huggingface_hub",
  "datasets",
  "poke-env @ git+https://github.com/jakegrigsby/poke-env.git"
]

[project.urls]
Homepage = "https://metamon.tech"
Repository = "https://github.com/UT-Austin-RPL/metamon"

[tool.setuptools]
packages = ["metamon"]

